...
                Row(
                    verticalAlignment = Alignment.CenterVertically
                ) {
                    if (isSelected) {
                        Icon(
                            painter = painterResource(R.drawable.ic_check),
                            contentDescription = "Selected",
                            tint = Color.White,
                            modifier = Modifier.padding(end = 4.dp),
                        )
                    }
                    Text(text = option, style = MaterialTheme.typography.headlineSmall)
                }
...
