...
                )

            } else { // check the entered field values against those in the WedCheck record
                // sex must match unless entered as Unknown
                if (seal.sex != "Unknown" && seal.sex != wedCheckSeal.sex) {
                    sealValid = false
                    validationFailureReasons.append("\n " + "Sex doesn't match")
                }

                // number of tags must match
                if (seal.numTags != wedCheckSeal.numTags) {
                    sealValid = false
                    validationFailureReasons.append("\n " + "Number of tags doesn't match")
...
