...
            Modifier
                .padding(horizontal = 18.dp),
            horizontalAlignment = Alignment.CenterHorizontally,
            verticalArrangement = Arrangement.Center
        ) {
            Text(
                text = "Override",
                style = MaterialTheme.typography.titleMedium
            )
            Checkbox(
                checked = uiState.overrideColony,
                onCheckedChange = {
                    viewModel.setOverrideColonyCheckbox(it)
...
        Column(
            modifier = Modifier.fillMaxWidth(1f),
            horizontalAlignment = Alignment.CenterHorizontally
        ) {
            if (uiState.overrideColony) {
                ColonyDropDown(
                    label = "Selected Colony",
                    options = coloniesList,
                    selectedOption = metadata.selectedColony?.location ?: "",
                    onValueChange = { valueSelected ->
                        viewModel.updateSelectedColony(valueSelected)
                    }
                )
...
