...
                        containerColor = Color.LightGray,
                        onClick = { onDismissRequest()},
                        icon = { // no icon
                        },
                        text = {
                            Text(
                                "Cancel",
                                style = MaterialTheme.typography.titleLarge
                            )
                        }
                    )

                    ExtendedFloatingActionButton(
...
