...
    accuracyMeters = 8f,
    isLiveFix = true,
)

private val SAMPLE_COLONY = SealColony(
    inOut = "in",
    location = "Hutton Cliffs",
    nLimit = -77.4,
    sLimit = -77.8,
    wLimit = 166.3,
    eLimit = 166.7,
    adjLat = -77.63004,
    adjLong = 166.7941,
...
